
[Test_run/config_does_not_exist - 1]

---

[Test_run/config_does_not_exist - 2]
please create <tempdir>/gh-rr.yml to configure your repositories

---

[Test_run/dry_run - 1]
would have used `gh pr edit` to request reviews from:
  - octocat

---

[Test_run/dry_run - 2]

---

[Test_run/explicit_group - 1]
requested reviews on https://github.com/octocat/hello-world/pull/123 from:
  - octodog
  - octopus

---

[Test_run/explicit_group - 2]

---

[Test_run/explicit_group - 3]
[
 "pr",
 "edit",
 "123",
 "--repo",
 "octocat/hello-world",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run/fulsome_case - 1]
requested reviews on https://github.com/octocat/hello-sunshine/pull/123 from:
  - octodog
  - octopus

---

[Test_run/fulsome_case - 2]

---

[Test_run/fulsome_case - 3]
[
 "pr",
 "edit",
 "123",
 "--repo",
 "octocat/hello-sunshine",
 "--add-reviewer",
 "octodog",
 "--add-reviewer",
 "octopus"
]
---

[Test_run/group_does_not_exist_in_config - 1]

---

[Test_run/group_does_not_exist_in_config - 2]
octocat/hello-world does not have a group named does-not-exist

---

[Test_run/invalid_config - 1]

---

[Test_run/invalid_config - 2]
yaml: unmarshal errors:
  line 1: cannot unmarshal !!! `` into main.Config

---

[Test_run/repository_does_not_exist_in_config - 1]

---

[Test_run/repository_does_not_exist_in_config - 2]
no reviewers are configured for octocat/hello-world

---

[Test_run/repository_must_be_prefixed_with_owner - 1]

---

[Test_run/repository_must_be_prefixed_with_owner - 2]
repository should be in the format of <owner>/<repository>

---

[Test_run/repository_must_be_provided_as_the_first_argument - 1]

---

[Test_run/repository_must_be_provided_as_the_first_argument - 2]
first argument must be repository in <owner>/<repository> format

---

[Test_run/repository_should_not_be_a_url - 1]

---

[Test_run/repository_should_not_be_a_url - 2]
repository should be in the format of <owner>/<repository>

---

[Test_run/target_does_not_have_to_be_a_number - 1]

---

[Test_run/target_does_not_have_to_be_a_number - 2]
please create <tempdir>/gh-rr.yml to configure your repositories

---

[Test_run/target_is_not_required - 1]

---

[Test_run/target_is_not_required - 2]
please create <tempdir>/gh-rr.yml to configure your repositories

---

[Test_run/when_ghExec_fails - 1]

could not add reviewers: no pull requests found for branch "update-readme"

---

[Test_run/when_ghExec_fails - 2]

---

[Test_run/when_ghExec_fails - 3]
[
 "pr",
 "edit",
 "",
 "--repo",
 "octocat/hello-world",
 "--add-reviewer",
 "octocat"
]
---
